@@ -1,166 +1,101 @@
-
 import java.io.File
 import org.gradle.api.tasks.bundling.Jar
+import org.jetbrains.kotlin.gradle.dsl.KotlinCompile
+import org.jetbrains.kotlin.gradle.dsl.KotlinJvmCompile
 
-apply { plugin("kotlin") }
-
-jvmTarget = "1.6"
+plugins {
+    kotlin("jvm")
+    id("jps-compatible")
+}
 
 val compilerModules: Array<String> by rootProject.extra
 val otherCompilerModules = compilerModules.filter { it != path }
 
-val depDistProjects = listOf(
-        ":kotlin-script-runtime",
-        ":kotlin-stdlib",
-        ":kotlin-reflect",
-        ":kotlin-test:kotlin-test-jvm")
+val effectSystemEnabled: Boolean by rootProject.extra
+val newInferenceEnabled: Boolean by rootProject.extra
 
-// TODO: it seems incomplete, find and add missing dependencies
-val testDistProjects = listOf(
-        "", // for root project
-        ":prepare:mock-runtime-for-test",
-        ":kotlin-compiler",
-        ":kotlin-script-runtime",
-        ":kotlin-stdlib",
-        ":kotlin-stdlib-jre7",
-        ":kotlin-stdlib-jre8",
-        ":kotlin-stdlib-js",
-        ":kotlin-reflect",
-        ":kotlin-test:kotlin-test-jvm",
-        ":kotlin-test:kotlin-test-junit",
-        ":kotlin-test:kotlin-test-js",
-        ":kotlin-daemon-client",
-        ":kotlin-preloader",
-        ":plugins:android-extensions-compiler",
-        ":kotlin-ant",
-        ":kotlin-annotations-jvm",
-        ":kotlin-annotations-android")
+configureFreeCompilerArg(effectSystemEnabled, "-Xeffect-system")
+configureFreeCompilerArg(newInferenceEnabled, "-Xnew-inference")
+
+fun configureFreeCompilerArg(isEnabled: Boolean, compilerArgument: String) {
+    if (isEnabled) {
+        allprojects {
+            tasks.withType<KotlinCompile<*>> {
+                kotlinOptions {
+                    freeCompilerArgs += listOf(compilerArgument)
+                }
+            }
+        }
+    }
+}
+
+val antLauncherJar by configurations.creating
 
 dependencies {
-    depDistProjects.forEach {
-        testCompile(projectDist(it))
-    }
+    testRuntime(intellijDep()) // Should come before compiler, because of "progarded" stuff needed for tests
+
+    testCompile(project(":kotlin-script-runtime"))
+    testCompile(project(":kotlin-test:kotlin-test-jvm"))
+    
+    testCompile(kotlinStdlib())
+
     testCompile(commonDep("junit:junit"))
-    testCompileOnly(projectDist(":kotlin-test:kotlin-test-jvm"))
-    testCompileOnly(projectDist(":kotlin-test:kotlin-test-junit"))
-    testCompile(project(":compiler.tests-common"))
-    testCompile(project(":compiler:tests-common-jvm6"))
+    testCompileOnly(project(":kotlin-test:kotlin-test-jvm"))
+    testCompileOnly(project(":kotlin-test:kotlin-test-junit"))
+    testCompile(projectTests(":compiler:tests-common"))
+    testCompile(projectTests(":compiler:fir:psi2fir"))
+    testCompile(projectTests(":compiler:fir:resolve"))
+    testCompile(projectTests(":generators:test-generator"))
     testCompile(project(":compiler:ir.ir2cfg"))
     testCompile(project(":compiler:ir.tree")) // used for deepCopyWithSymbols call that is removed by proguard from the compiler TODO: make it more straightforward
+    testCompile(project(":kotlin-scripting-compiler"))
+    testCompile(project(":kotlin-script-util"))
+    testCompileOnly(projectRuntimeJar(":kotlin-daemon-client"))
+    testCompileOnly(project(":kotlin-reflect-api"))
     otherCompilerModules.forEach {
         testCompileOnly(project(it))
     }
-    testCompile(ideaSdkDeps("openapi", "idea", "util", "asm-all", "commons-httpclient-3.1-patched"))
-    testRuntime(ideaSdkCoreDeps("*.jar"))
-    testRuntime(ideaSdkDeps("*.jar"))
+    testCompileOnly(intellijCoreDep()) { includeJars("intellij-core") }
+    testCompileOnly(intellijDep()) { includeJars("openapi", "idea", "idea_rt", "util", "asm-all", rootProject = rootProject) }
+
+    testRuntime(project(":kotlin-reflect"))
+    testRuntime(project(":kotlin-daemon-client"))
+    testRuntime(androidDxJar())
+    testRuntime(files(toolsJar()))
+
+    antLauncherJar(commonDep("org.apache.ant", "ant"))
+    antLauncherJar(files(toolsJar()))
+
+    // For JPS build
+    if (System.getProperty("idea.active") != null) {
+        testRuntimeOnly(files("${rootProject.projectDir}/dist/kotlinc/lib/kotlin-reflect.jar"))
+    }
 }
 
 sourceSets {
     "main" {}
     "test" {
         projectDefault()
-        // not yet ready
-//        java.srcDir("tests-ir-jvm/tests")
     }
 }
 
 val jar: Jar by tasks
-jar.apply {
-    from(the<JavaPluginConvention>().sourceSets.getByName("main").output)
-    from("../idea/src").apply {
-        include("META-INF/extensions/common.xml",
-                "META-INF/extensions/kotlin2jvm.xml",
-                "META-INF/extensions/kotlin2js.xml")
-    }
+jar.from("../idea/resources") {
+    include("META-INF/extensions/compiler.xml")
 }
-
-testsJar {}
 
 projectTest {
-    dependsOn(*testDistProjects.map { "$it:dist" }.toTypedArray())
+    dependsOn(":dist")
     workingDir = rootDir
-    systemProperty("kotlin.test.script.classpath", the<JavaPluginConvention>().sourceSets.getByName("test").output.classesDirs.joinToString(File.pathSeparator))
-}
-
-evaluationDependsOn(":compiler:tests-common-jvm6")
-
-fun Project.codegenTest(target: Int, jvm: Int,
-                        jdk: String = "JDK_${if (jvm <= 8) "1" else ""}$jvm",
-                        body: Test.() -> Unit): Test = projectTest("codegenTarget${target}Jvm${jvm}Test") {
-    dependsOn(*testDistProjects.map { "$it:dist" }.toTypedArray())
-    workingDir = rootDir
-
-    filter.includeTestsMatching("org.jetbrains.kotlin.codegen.BlackBoxCodegenTestGenerated*")
-    filter.includeTestsMatching("org.jetbrains.kotlin.codegen.BlackBoxInlineCodegenTestGenerated*")
-    filter.includeTestsMatching("org.jetbrains.kotlin.codegen.CompileKotlinAgainstInlineKotlinTestGenerated*")
-    filter.includeTestsMatching("org.jetbrains.kotlin.codegen.CompileKotlinAgainstKotlinTestGenerated*")
-    filter.includeTestsMatching("org.jetbrains.kotlin.codegen.BlackBoxAgainstJavaCodegenTestGenerated*")
-
-    if (jdk == "JDK_9") {
-        jvmArgs = listOf("--add-opens", "java.desktop/javax.swing=ALL-UNNAMED", "--add-opens", "java.base/java.io=ALL-UNNAMED")
-    }
-    body()
+    systemProperty("kotlin.test.script.classpath", testSourceSet.output.classesDirs.joinToString(File.pathSeparator))
+    systemProperty("kotlin.suppress.expected.test.failures", project.findProperty("kotlin.suppress.expected.test.failures") ?: false)
     doFirst {
-        val jdkPath = project.property(jdk) ?: error("$jdk is not optional to run this test")
-        executable = "$jdkPath/bin/java"
-        println("Running test with $executable")
-    }
-    group = "verification"
-}
-
-codegenTest(target = 6, jvm = 6, jdk = "JDK_18") {
-    dependsOn(":compiler:tests-common-jvm6:build")
-
-    //TODO make port flexible
-    val port = "5100"
-    var jdkProcess: Process? = null
-
-    doFirst {
-        logger.info("Configuring JDK 6 server...")
-        val jdkPath = project.property("JDK_16") ?: error("JDK_16 is not optional to run this test")
-        val executable = "$jdkPath/bin/java"
-        val main = "org.jetbrains.kotlin.test.clientserver.TestProcessServer"
-
-        val classpath = getSourceSetsFrom(":compiler:tests-common-jvm6")["main"].output.asPath + ":" +
-                getSourceSetsFrom(":kotlin-stdlib")["main"].output.asPath + ":" +
-                getSourceSetsFrom(":kotlin-stdlib")["builtins"].output.asPath + ":" +
-                getSourceSetsFrom(":kotlin-test:kotlin-test-jvm")["main"].output.asPath
-
-        logger.debug("Server classpath: $classpath")
-
-        val builder = ProcessBuilder(executable, "-cp", classpath, main, port)
-        builder.directory(rootDir)
-
-        builder.inheritIO()
-        builder.redirectErrorStream(true)
-
-        logger.info("Starting JDK 6 server $executable")
-        jdkProcess = builder.start()
-
-    }
-    systemProperty("kotlin.test.default.jvm.target", "1.6")
-    systemProperty("kotlin.test.java.compilation.target", "1.6")
-    systemProperty("kotlin.test.box.in.separate.process.port", port)
-
-    doLast {
-        logger.info("Stopping JDK 6 server...")
-        jdkProcess?.destroy()
+        systemProperty("kotlin.ant.classpath", antLauncherJar.asPath)
+        systemProperty("kotlin.ant.launcher.class", "org.apache.tools.ant.Main")
     }
 }
 
-codegenTest(target = 6, jvm = 9) {
-    systemProperty("kotlin.test.default.jvm.target", "1.6")
-}
 
-codegenTest(target = 8, jvm = 8) {
-    systemProperty("kotlin.test.default.jvm.target", "1.8")
-}
+val generateTests by generator("org.jetbrains.kotlin.generators.tests.GenerateCompilerTestsKt")
 
-codegenTest(target = 8, jvm = 9) {
-    systemProperty("kotlin.test.default.jvm.target", "1.8")
-}
-
-codegenTest(target = 9, jvm = 9) {
-    systemProperty("kotlin.test.default.jvm.target", "1.8")
-    systemProperty("kotlin.test.substitute.bytecode.1.8.to.1.9", "true")
-}
+testsJar()
